# take-two-scorecard-testing

./: .gitignore  LICENSE  README.md  multiexec.py  setup.cfg
.github/workflows/: Dockerfile  README.md  deploy.yaml  gpu_watchdog.py  logging.conf  requirements.txt  scorecard.yml
