[metadata]
name = multiexec
version = 0.0.4
author = Joseph Haaga
author_email = haaga.joe@gmail.com
description = Simple utility for running distributed kubectl exec commands
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/interos/multiexec
project_urls =
    Bug Tracker = https://github.com/interos/multiexec/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:
scripts = 
    multiexec.py

[options.entry_points]
console_scripts =
    multiexec = multiexec:main

[options.packages.find]
exclude =
    build*
    dist*
    tests*
    venv*
